fixed showing old deprecated parameters on bosstag command (#1876)
* fixed showing params deprecated

* style